# lox

./: .env.example  .gitignore  AGENTS.md  API_DESIGN_GUIDELINES.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.release  LICENSE  LICENSE-COMMERCIAL  PLAN.md  README.md  codecov.yml
.beads/: .gitignore  config.yaml  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  secret-scan.yml
Formula/: lox.rb
contrib/ux-validation/: README.md  lox-validate.py
docs/: SAVE_PROTOCOL.md  WIRING_GUIDE.md  _config.yml  api-research.md  autopilot-design.md  design-backup-inspect.md  design-backup.md  docs-index.json  index.md  loxone-config-research.md  loxone-miniserver-protocol.txt  loxone-structurefile-protocol.txt  plan.md  templates.json
docs/_includes/: head_custom.html
docs/_sass/color_schemes/: lox.scss
docs/_sass/custom/: custom.scss
docs/commands/: controls.md  system.md
docs/datasheets/: index.json
docs/datasheets/extracted/: 200054-Ultraschallsensor.md  CommunicatingWithMiniserver.md  Datasheet_1wireExtension_100014.md  Datasheet_1wireTemperatureProbe_200077.md  Datasheet_ACControlAir_DaikinP1P2_100559.md  Datasheet_ACControlAir_Gree_100553.md  Datasheet_ACControlAir_LG_100618.md  Datasheet_ACControlAir_MHI_100558.md  Datasheet_ACControlAir_Sinclair_100587.md  Datasheet_ACControl_DaikinS21_100556.md  Datasheet_ACControl_Fujitsu_100557.md  Datasheet_ACControl_MEL_100555.md  Datasheet_ACControl_Toshiba_100554.md  Datasheet_AIExtension_100381.md  Datasheet_AIExtension_100471.md  Datasheet_AOExtension_100382.md  Datasheet_AirBaseExtension_100114.md  Datasheet_AlarmSirenAir_100312.md  Datasheet_AlarmSirenTree_100313.md  Datasheet_Audioserver_100428.md  Datasheet_BelimoAir_100520.md  (+148 more)
docs/guides/: config-versioning.md  opentelemetry.md
docs/kb/: 1-wire-extension.md  2-position-controller.md  230v-dimmed-downlights-new-build.md  230v-dimmed-lighting-retrofit.md  230v-switched-downlights-new-build.md  230v-switched-lighting-retrofit.md  24v-downlights-new-build-cost.md  24v-downlights-new-build.md  24v-spotlights-new-build-flexibility.md  24v-spotlights-retrofit.md  3-position-controller.md  8-access-control-with-loxone.md  aal-smart-alarm.md  ac-central-controller.md  ac-child-mode.md  ac-control-air-for-daikin-p1p2.md  ac-control-air-for-daikin-s21.md  ac-control-air-for-fujitsu.md  ac-control-air-for-gree.md  ac-control-air-for-lg.md  ac-control-air-for-mitsubishi-electric.md  ac-control-air-for-mitsubishi-heavy-industries.md  ac-control-air-for-panasonic.md  ac-control-air-for-toshiba.md  ac-control-commercial.md  ac-control.md  ac-in-night-mode.md  ac-with-presence-time-and-window-monitoring.md  ac-with-spotprice.md  ac-with-touch-pure-flex.md  access-control-for-elevators.md  access-control-with-loxone-2.md  access-controller.md  add-2-way.md  add-4-way.md  adding-and-replacing-extensions-2.md  adding-and-replacing-extensions.md  ai-extension-gen-1.md  ai-extension.md  air-base-extension.md  (+640 more)
docs/schemas/: 2-position-controller.json  3-position-controller.json  VALIDATION_REPORT.md  aal-smart-alarm.json  ac-central-controller.json  ac-control.json  access-controller.json  add-2-way.json  add-4-way.json  alarm-chain.json  alarm-clock.json  analogue-memory.json  analogue-min-max-limiter.json  analogue-multiplexer-2-way.json  analogue-multiplexer-4-way.json  analogue-watchdog.json  and.json  audio-central.json  audio-player-fixed-group.json  audio-player.json  authentication-nfc-code-touch.json  automatic-blinds-integrated.json  automatic-blinds.json  automatic-rule.json  average.json  binary-decoder-2.json  binary-decoder.json  binary-encoder.json  brightness-control.json  burglar-alarm.json  call-generator.json  climate-controller.json  combined-window-contact.json  command-recognition.json  comparator.json  counter.json  crosswalk.json  custom-script-programming.json  delayed-pulse.json  dewpoint-calculator.json  (+128 more)
k8s/: config-backup-cronjob.yaml
scripts/: apply-ux-corrections.py  build-schemas.py  build-templates.py  extract-strings.py  fetch-datasheets.py  inject_and_test.py  scrape-docs.py  validate-all.sh  validate-catA.sh  validate-catB.sh  validate-schemas.py  validate-setup.sh  validate.py  validate_blocks.py  validate_structural.py
skills/loxone-config/: SKILL.md
src/: client.rs  config.rs  config_edit.rs  daemon.rs  errors.rs  gitops.rs  loxcc.rs  loxone_xml.rs  main.rs  otel.rs  rc6.rs  stream.rs  token.rs  ws.rs  wsx.rs
src/commands/: config_cmd.rs  control.rs  inspect.rs  system.rs
tests/: cli_smoke.rs
tests/vectors/: comparison.json  comparison2.json  encoding.json  encoding2.json  energy.json  large_controllers.json  math2.json  math_remaining.json  misc.json  stateful.json  stateful2.json  timing.json  timing2.json  ui_switch.json
