[package]
name = "lox"
version = "0.1.0"
edition = "2021"
description = "Loxone Miniserver CLI — control lights, blinds, and automations from your terminal"
repository = "https://github.com/discostu105/lox"
homepage = "https://github.com/discostu105/lox"
keywords = ["loxone", "smarthome", "home-automation", "cli", "miniserver"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "lox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
anyhow = "1"

# WebSocket daemon deps
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
byteorder = "1"
futures-util = "0.3"
notify = "6"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.9"
uuid = { version = "1", features = ["v4"] }
x509-cert = "0.2"
der = "0.7"

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
